--- a/src/Components/Social/social.scss
+++ b/src/Components/Social/social.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     margin-top: 50px;
     align-items: center;
-    background-color: #121111;
+    background-color: white;
     box-shadow: 0px 0px 15px #00000027;
     padding: 15px 10px;
     border-radius: 5em;
