--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -3,3 +3,11 @@
     padding: 0%;
     box-sizing: border-box;
 }
+.Homepage{
+ .footer:nth-of-type(1){
+    display: none;
+}
+   .footer:nth-of-type(2){
+    display: none;
+}
+}
