changes in hero section

--- a/src/Pages/Home/SubHome/Hero.scss
+++ b/src/Pages/Home/SubHome/Hero.scss
@@ -67,7 +67,7 @@ h2{
 @media screen and (max-width:484px) {
     .content{
         background: rgb(255,255,255);
-        background: linear-gradient(45deg, rgba(255,255,255,0) 13%, rgba(0,0,0,0.7539390756302521) 29%) !important;
+        background: linear-gradient(45deg, rgba(255, 255, 255, 0) -30%, rgba(0, 0, 0, 0.7539390756) 73%) !important;
     }
     .content-Sub{
         right: -170px !important;
